# Octizys

./: .gitignore  Cargo.toml  README.md  justfile  rustfmt.toml
octizys_command_line/: Cargo.toml
octizys_command_line/src/: arguments.rs  error_report.rs  main.rs  some.txt
octizys_common/: Cargo.toml
octizys_common/src/: :  equivalence.rs  error.rs  generic_tree.rs  identifier.rs  lib.rs  logic_path.rs  module_logic_path.rs  newtype.rs  report.rs  span.rs
octizys_compiler/: Cargo.toml
octizys_compiler/src/: compiler.rs  configuration.rs  mod.rs
octizys_core/: Cargo.toml
octizys_core/src/: common.rs  lib.rs  terms.rs  types.rs
octizys_cst/: :  Cargo.toml  log.rs
octizys_cst/src/: base.rs  comments.rs  cst.rs  expressions.rs  imports.rs  lib.rs  literals.rs  patterns.rs  pretty.rs  top.rs  types.rs
octizys_doc/: Cargo.toml
octizys_doc/src/: configuration.rs  documentation.rs  lib.rs
octizys_formatter/: Cargo.toml  configuration.rs  formatter.rs
octizys_formatter/src/: common.rs  cst.rs  keywords.rs  lib.rs  to_document.rs
octizys_macros/: Cargo.toml
octizys_macros/src/: equivalence_arguments.rs  equivalence_impl.rs  equivalence_parser.rs  lib.rs
octizys_macros/tests/: enums.rs  structs.rs
octizys_parser/: Cargo.toml  build.rs
octizys_parser/src/: :  error_report.rs  grammar.lalrpop  grammar.rs  grammar.y  lexer.l  lexer.rs  lexer2.rs  lexer3.rs  lib.rs  parser.rs  repl.rs  report.rs  tokens.rs
octizys_parser/tests/: imports.rs
octizys_pretty/: Cargo.toml
octizys_pretty/src/: combinators.rs  configuration.rs  document.rs  highlight.rs  lib.rs  pretty.rs  store.rs  types.rs
octizys_repl/: Cargo.toml  l.txt  l2.txt
octizys_repl/src/: arguments.rs  error_report.rs  main.rs
octizys_sast/: Cargo.toml
octizys_sast/src/: _type.rs  common.rs  expression.rs  inference.rs  inference2.rs  lib.rs  top.rs
octizys_text_store/: Cargo.toml
octizys_text_store/src/: store.rs
src/: arguments_parser.rs  common_configuration.rs  main.rs
src/run/: configuration.rs  run.rs
