[workspace]
members = [ "octizys_common", "octizys_core", "octizys_cst", "octizys_doc", "octizys_formatter", "octizys_macros","octizys_parser", "octizys_pretty", "octizys_sast", "octizys_text_store", "octizys_command_line"]
default-members = ["octizys_command_line"]

[package]
name = "octizys"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "octizys"
test = false
bench = false
path = "octizys_command_line/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints.rust]
unused = "allow"
unsafe_code = "forbid"

[dev-dependencies]
paste = "1.0.15"

[workspace.dependencies]
lalrpop = "0.21.0"
lalrpop-util = { version = "0.21.0", features = ["unicode"] }
paste = "1.0.15"
regex = "1.10.6"
string-interner = "0.17.0"
konst = "0.3.9"
log = "0.4.22"
