[package]
name = "octizys_command_line"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "octizys"
test = false
bench = false
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
lalrpop-util = {workspace=true}
log.workspace = true
octizys_common = { version = "0.1.0", path = "../octizys_common" , features=["lalrpop"]}
octizys_cst = { version = "0.1.0", path = "../octizys_cst" }
octizys_formatter = { version = "0.1.0", path = "../octizys_formatter" }
octizys_macros = { version = "0.1.0", path = "../octizys_macros" }
octizys_parser = { version = "0.1.0", path = "../octizys_parser" }
octizys_pretty = { version = "0.1.0", path = "../octizys_pretty" }
octizys_text_store = { version = "0.1.0", path = "../octizys_text_store" }
simplelog = {version = "0.12.2"}

[lints.rust]
unused = "allow"
unsafe_code = "forbid"
