[package]
name = "octizys_common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
octizys_pretty={path="../octizys_pretty"}
regex = "1.10.6"
string-interner = "0.17.0"

[dev-dependencies]
paste = "1.0.15"
