[package]
name = "octizys_common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
octizys_text_store={path="../octizys_text_store"}
octizys_pretty={path="../octizys_pretty"}
regex = {workspace=true}
string-interner = {workspace=true}

[dev-dependencies]
paste = {workspace=true}
