[package]
name = "octizys_cst"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
octizys_text_store={path="../octizys_text_store"}
octizys_pretty={path="../octizys_pretty", optional=true}
octizys_common={path="../octizys_common"}
derivative = "2.2.0"
octizys_macros = { version = "0.1.0", path = "../octizys_macros" }


[feature]
pretty=["dep:octizys_text_store"]
