[package]
name = "octizys_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
octizys_common = {path = "../octizys_common"}
octizys_core = {path = "../octizys_core"}
octizys_cst = {path = "../octizys_cst"}
octizys_pretty = {path = "../octizys_pretty"}

lalrpop-util = { version = "0.21.0", features = ["lexer", "unicode"] }
paste = "1.0.15"
regex = "1.10.6"
string-interner = "0.17.0"


[build-dependencies]
cfgrammar = "0.13"
lalrpop = "0.21.0"

[lints.rust]
unused = "allow"
unsafe_code = "forbid"
