[package]
name = "octizys_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
octizys_text_store = {path = "../octizys_text_store"}
octizys_common = {path = "../octizys_common"}
octizys_cst = {path = "../octizys_cst"}
octizys_macros = {path = "../octizys_macros"}
octizys_pretty = {path = "../octizys_pretty"}
octizys_formatter = {path = "../octizys_formatter",features=["cst"]}
lalrpop-util = {workspace=true}
paste = {workspace=true}
regex = {workspace=true}



[build-dependencies]
lalrpop = {workspace=true}

[lints.rust]
unused = "allow"
unsafe_code = "forbid"
